2.12.0/todo/result_python_frontend.md

# Release Notes worksheet python_frontend

You should:

1. ensure commit categorization is correct
2. write up major features, bc-breaking changes, deprecations in detail
3. summarize the other sections

## 1. Ensure commit categorization is correct

* Please sort commits into the following categories (you should not rename the categories!), I tried to pre-sort these to ease your work, feel free to move commits around if the current categorization is not good.
* Anything that is not public facing needs to be removed.
* If anything is miscategorized/belongs to another domain, move it to `miscategorized.md`.
* Please scan through `miscategorized.md` and handle any commits that belong within your domain according to these instructions.

The categories below are as follows:

* BC breaking: All commits that are BC-breaking. These are the most important commits. If any pre-sorted commit is actually BC-breaking, do move it to this section. Each commit should contain a paragraph explaining the rational behind the change as well as an example for how to update user code [BC-Guidelines](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit#heading=h.a9htwgvvec1m).
* Deprecations: All commits introducing deprecation. Each commit should include a small example explaining what should be done to update user code.
* new_features: All commits introducing a new feature (new functions, new submodule, new supported platform etc)
* improvements: All commits providing improvements to existing feature should be here (new backend for a function, new argument, better numerical stability)
* bug fixes: All commits that fix bugs and behaviors that do not match the documentation
* performance: All commits that are added mainly for performance (we separate this from improvements above to make it easier for users to look for it)
* documentation: All commits that add/update documentation
* Developers: All commits that are not end-user facing but still impact people that compile from source, develop into pytorch, extend pytorch, etc
* not user facing: All commits that are not public end-user facing and hence should be dropped from the release notes

## 2. Major features, BC-breaking changes, deprecations

The main goal of this process is to rephrase all the commit messages below to make them **clear and easy to read** by the end user. You should follow the following instructions to do so:

* **Please clean up and format commit titles to be readable by the general PyTorch user.** Make sure you're [following the guidance here](https://docs.google.com/document/d/14OmgGBr1w6gl1VO47GGGdwrIaUNr92DFhQbY_NEk8mQ/edit)! Your resulting notes must be consistent and easy to read.
* We place a lot of emphasis on the “BC-breaking” and “deprecation” sections. Those should be where the most effort goes in. The “improvements” and “bug fixes” for Python API should be nice as well.

## 3. Summarize the other sections

For the other sections (improvements, bug fixes, performance, documentation, developers, not user facing) - use your
judgement to summarize the key PRs. You do not need to make every commit description perfect
(changed in v2.10 to simplify the process).

Once you are finished, move this very file from `todo/` to `done/` and submit a pull request.

Feel free to use https://github.com/pytorch/pytorch/releases/tag/v2.10.0 as an example.

## python_frontend
### bc breaking
### deprecation
### new features
### improvements
- [BE] Use compiler wrapper when building C++ extensions ([#175696](https://github.com/pytorch/pytorch/pull/175696))
- Update uniform and normal sample on CPU to improve fp16/bf16 results ([#175988](https://github.com/pytorch/pytorch/pull/175988))
- [BE][Ez]: Torch typing improve is_storage ([#177872](https://github.com/pytorch/pytorch/pull/177872))
- [1/N] Use torch._utils.cpu_count ([#178742](https://github.com/pytorch/pytorch/pull/178742))
### bug fixes
- Fix torch.isclose broadcast failure with equal_nan=True ([#175244](https://github.com/pytorch/pytorch/pull/175244))
- [Native DSL] Use vendored packaging instead of  external packaging dependency in torch/_native/ ([#179456](https://github.com/pytorch/pytorch/pull/179456))
### performance
### docs
- [Accelerator] Document `get_device_capability` and clarify what supported dtypes mean ([#178397](https://github.com/pytorch/pytorch/pull/178397))
### devs
### Untopiced
- Fix typo in  `index_copy` doc ([#175843](https://github.com/pytorch/pytorch/pull/175843))
- Update amax doc in _torch_docs.py ([#175863](https://github.com/pytorch/pytorch/pull/175863))
- [Native DSL] Add _native ops framework ([#176280](https://github.com/pytorch/pytorch/pull/176280))
- [test] Pass a tuple of 2 `SwizzleType` to nvfp4 `scaled_mm_v2` with two scales ([#177625](https://github.com/pytorch/pytorch/pull/177625))
- [2/2] Introduce torch.accelerator.Graph as a unified frontend Graph interface ([#171285](https://github.com/pytorch/pytorch/pull/171285))
- Update take_along_dim doc in _torch_docs.py ([#175844](https://github.com/pytorch/pytorch/pull/175844))
- [Native DSL] Add user-defined registration order ([#178637](https://github.com/pytorch/pytorch/pull/178637))
- Change requires_grad to Optional[bool] in torch.asarray ([#170897](https://github.com/pytorch/pytorch/pull/170897))
- [Native DSL] Add torch.backends.python_native ([#178902](https://github.com/pytorch/pytorch/pull/178902))
- [BE] Remove `onlyCPU` decorator for nonzero_static tests ([#179591](https://github.com/pytorch/pytorch/pull/179591))
- Introduce is_capturing method for c10::Stream & torch.Stream ([#171443](https://github.com/pytorch/pytorch/pull/171443))
### not user facing
- Initial implementation of stateless RNG APIs ([#177229](https://github.com/pytorch/pytorch/pull/177229))
- Stateless RNG APIs for uniform & normal generation ([#177230](https://github.com/pytorch/pytorch/pull/177230))
### security
